manifests/prometheus-stack/prometheus-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: kube-monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: prometheus.domain.com
    http:
      paths:
      - backend:
          serviceName: prometheus-kube-prometheus-prometheus
          servicePort: 9090
